# models/Employee.js
@@ -1,32 +1,31 @@
 const mongoose = require('mongoose');
 
-const employeeSchema = new mongoose.Schema({
+const EmployeeSchema = new mongoose.Schema({
     firstName: {
         type: String,
-        required: true,
+        required: true
     },
     lastName: {
         type: String,
-        required: true,
+        required: true
     },
     position: {
         type: String,
-        required: true,
+        required: true
     },
     department: {
         type: String,
-        required: true,
+        required: true
     },
     hireDate: {
         type: Date,
-        required: true,
+        required: true
     },
-    evaluations: [{
+    evaluators: [{
         type: mongoose.Schema.Types.ObjectId,
-        ref: 'Evaluation',
-    }],
-}, {
-    timestamps: true,
-});
+        ref: 'User'
+    }]
+}, { timestamps: true });
 
-module.exports = mongoose.model('Employee', employeeSchema);
+const Employee = mongoose.model('Employee', EmployeeSchema);
+module.exports = Employee;
